--- a/index.html
+++ b/index.html
@@ -4,63 +4,81 @@
     <title>Webstudio</title>
     <meta name="description" content="An awesome website" />
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com>" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header Section -->
     <header>
-      <nav>
-        <a href="goit-markup-hw-01">WEBSTUDIO</a>
-        <ul>
-          <li><a href="goit-markup-hw-01">Studio</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Contacts</a></li>
+      <nav class="nav">
+        <a href="./index.html" class="nav-logo" nav-list-list>WEBSTUDIO</a>
+        <ul class="nav-list-list">
+          <li class="nav-list-item">
+            <a class="nav-list-item-link" href="./index.html">Studio</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="nav-list-item-link" href="./index.html">Portfolio</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="nav-list-item-link" href="./index.html">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="address-list-list">
+          <li class="address-list-item">
+            <a class="address-list-item-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-list-item">
+            <a class="address-list-item-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <!-- Main Section -->
     <main>
-      <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main-hero">
+        <h1 class="main-hero-heading">Effective Solutions for Your Business</h1>
+        <button class="main-hero-cta" type="button">Order Service</button>
       </section>
 
       <section class="feature">
         <h2 hidden>Features</h2>
-        <ul>
-          <li>
+        <ul class="feature-list-list">
+          <li class="feature-list-item">
             <h3>Strategy</h3>
-            <p>
+            <p class="feature-list-item-item">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
-          <li>
+          <li class="feature-list-item">
             <h3>Punctuality</h3>
-            <p>
+            <p class="feature-list-item-item">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
-          <li>
+          <li class="feature-list-item">
             <h3>Diligence</h3>
-            <p>
+            <p class="feature-list-item-item">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
-          <li>
+          <li class="feature-list-item">
             <h3>Technologies</h3>
-            <p>
+            <p class="feature-list-item-item">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -96,40 +114,40 @@
       </section>
 
       <section class="our-team">
-        <h2>Our Team</h2>
+        <h2 class="our-team-list-list">Our Team</h2>
         <ul>
-          <li>
+          <li class="our-team-list-item">
             <img src="images/img1.jpg" alt="Mark Guerrero" width="264" />
 
             <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="our-team-list-item-position">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-list-item">
             <img src="images/img2.jpg" alt="Tom Ford" width="264" />
 
             <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="our-team-list-item-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-list-item">
             <img src="images/img3.jpg" alt="Camila Garcia" width="264" />
 
             <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="our-team-list-item-position">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-list-item">
             <img src="images/img4.jpg" alt="Daniel Wilson" width="264" />
 
             <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="our-team-list-item-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Footer Section -->
-    <footer>
-      <a href="goit-markup-hw-01">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-list" href="goit-markup-hw-01">WebStudio</a>
+      <p class="footer-list-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
