--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="An awesome website" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;1,700&display=swap"
