--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="An awesome website" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
